--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "rss-parser": "^3.13.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
