--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,8 @@
       {
         "select-name": "off"
       }
-    ]
+    ],
+    "disown-opener": "off",
+    "axe/name-role-value": "off"
   }
 }
